--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <canvas id="canvas" width="620" height="480"></canvas>
     
         <!--The game code-->
-        <script src="scripts/objects.js"></script>
-        <script src="scripts/deathOfABallTurretGunner.js"></script>
+        <script src="/scripts/objects.js"></script>
+        <script src="/scripts/deathOfABallTurretGunner.js"></script>
     </body>
     
 </html>
