--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <title>Death of a Ball Turrent Gunner</title>
 
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.3.0/firebase-app.js"></script>
+    <!--<script defer src="/__/firebase/5.3.0/firebase-app.js"></script-->
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.3.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.3.0/firebase-database.js"></script>
-    <script defer src="/__/firebase/5.3.0/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.3.0/firebase-storage.js"></script>
+    <!--<script defer src="/__/firebase/5.3.0/firebase-auth.js"></script>
+    //<script defer src="/__/firebase/5.3.0/firebase-database.js"></script>
+    //<script defer src="/__/firebase/5.3.0/firebase-messaging.js"></script>
+    //<script defer src="/__/firebase/5.3.0/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+    <!--<script defer src="/__/firebase/init.js"></script>
 
     <!--//<style media="screen">
     //  body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
@@ -56,8 +56,8 @@
     <script src="scripts/deathOfABallTurretGunner.js"></script>
     //<p id="load">Firebase SDK Loading&hellip;</p>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
+    <!--script>
+      //document.addEventListener('DOMContentLoaded', function() {
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
         // // The Firebase SDK is initialized and available here!
         //
@@ -68,15 +68,15 @@
         //
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
 
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
+        //try {
+         // let app = firebase.app();
+          //let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+          //document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+        //} catch (e) {
+         // console.error(e);
+         // document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
+        //}
+      //});
+    </script-->
   </body>
 </html>
