--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <!--Add the sounds-->
     
     <!--The canvas-->
-    <canvas id="canvas" width="620" height="480"></canvas>
+    <canvas id="canvas"></canvas>
     
     <!--The game code-->
     <script src="scripts/objects.js"></script>
